added some styles to project

--- a/inedex.html
+++ b/inedex.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="responsive.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Afghanistan</h1>
+  </body>
 </html>
